fixed layout problem

--- a/css/main-style.css
+++ b/css/main-style.css
@@ -10,106 +10,89 @@ transition: all 250ms ease-in-out;}
   margin-right: 0px !important;
 }
 
-.topnav {
-  overflow: hidden;
-  height:72px;
+.navbar-brand {
+  padding: 28px 25px 35px 15px;
 }
 
-.white{
-	background-color:white;
-	color: #4289EF;
+.navbar-brand h1 {
+  letter-spacing:5px;
+  font-size: 1.1em;
+  text-transform: uppercase;
+  text-shadow: 0.5px 0.5px 0.5px #4289EF;
+  margin-top: 0;
+  margin-bottom: 0;
+  color:#ffffff;
+  font-weight: 0.5em;
 }
-.topnav a {
-  float:right;
-  display: block;
-  color: #f2f2f2;
+
+.navbar-brand h1:hover{
+  text-decoration:none;
+}
+
+
+#nav-list {
+  margin-top: 10px;
+  margin-right: 10px;
+  font-size: 15px;
   text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-
 }
 
-.topnav: scroll{
-	background-color:white;
-	color: #4289EF;
+
+#nav-list >li > a {
+  text-align: center;
+  color: #eee;
+  transform: perspective(1px) translateZ(0); /*for hover effect*/
+  box-shadow: 0 0 1px transparent;
+  transition-duration: 0.5s;
+  text-transform: uppercase;
 }
-.topnav a:hover{
-	color:white;
-	text-decoration:none;
+
+
+
+#nav-list button {
+  text-transform: uppercase;
+  background-color: #02b3e4;
+  padding: 13px 30px 13px 30px;
+  margin-right: 0px;
+  border-radius: 5px;
+  border: 0;
+  margin-top:-15px;
+  transform: perspective(1px) translateZ(0); /*for hover effect*/
+  box-shadow: 0 0 1px transparent;
+  transition-duration: 0.5s;
+  font-size: 15px;
 }
-.topnav .icon {
+
+
+
+#nav-list #notification {   /*WILL DISPLAY, WHEN LOGGED IN*/
   display: none;
 }
-@media screen and (max-width: 400px) {
-  .topnav a{display: none;}
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
+
+.navbar-toggle {
+  clear: both;
+  margin-top: -30px;
 }
 
-@media screen and (max-width: 400px) {
-  .topnav.responsive {position: relative;}
-  .topnav.responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: right;
-  }
+.navbar-toggle span{
+  border: 1px solid #fff;
 }
 
-
-.overlay {
-    height: 0;
-    width: 0;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    background-color: rgb(255, 255, 255);
-    background-color: rgba(255, 255, 255, 0.9);
-    overflow-x: hidden;
-    transition: 0.5s;
+.dropdown-menu > li > a {
+  color: #eee;
+  transform: perspective(1px) translateZ(0); /*for hover effect*/
+  box-shadow: 0 0 1px transparent;
+  transition-duration: 0.5s;
 }
 
-.overlay-content {
-    position: relative;
-    top: 25%;
-    width: 100%;
-    text-align: center;
-    margin-top: 30px;
+.dropdown-menu > li {
+  text-align: center;
+}
+.dropdown-menu > li > a:hover {
+  color: #fff;
+  transform: scale(1.05);
 }
 
-.overlay a {
-    padding: 8px;
-    text-decoration: none;
-    font-size: 20px;
-    color: #4289EF;
-    display: block;
-    transition: 0.3s;
-}
-
-.overlay .closebtn {
-	color: black;
-    position: absolute;
-    top: 20px;
-    right: 50%;
-    font-size: 60px;
-}
-
-@media screen and (max-height: 450px) {
-  .overlay a {font-size: 20px}
-  .overlay .closebtn {
-    font-size-adjust:auto;
-    top: 15px;
-    right: 50%;
-  }
-}
 
 @import url(https://fonts.googleapis.com/css?family=Istok+Web);
 @keyframes slidy {
